--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <script src="tableau-extensions-1.latest.js"></script>
 
      <!-- Your JavaScript code that uses the Extensions API goes here -->
-     <script src="hello-extension.js"></script>
+     <script src="Hello-Extension.js"></script>
      </head>
      <body>
        <div class="container">
