--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
      <!-- Tableau Extensions API Library  -->
      <!-- library is in the /lib directory -->
-     <script src="tableau-extensions-1.latest.js"></script>
+     <script src="https://raw.githubusercontent.com/tableau/extensions-api/master/lib/tableau-extensions-1.latest.js"></script>
 
      <!-- Your JavaScript code that uses the Extensions API goes here -->
-     <script src="Hello-Extension.js"></script>
+     <script src="https://raw.githubusercontent.com/mukunthan23/mukunthan23.github.io/master/Hello-Extension.js"></script>
      </head>
      <body>
        <div class="container">
