--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
      <!-- Bootstrap -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+	 
+	 <!-- D3 -->
+	 <script src="http://d3js.org/d3.v4.js"></script>
 
      <!-- Tableau Extensions API Library  -->
      <!-- library is in the /lib directory -->
@@ -28,5 +31,6 @@
            <button id="initializeButton" class="btn btn-primary">Initialize Extensions API</button>
          </div>
        </div>
+	   <div id="my_dataviz"></div>
      </body>
  </html>
