--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 	 
 	 <!-- D3 -->
-	 <script src="http://d3js.org/d3.v4.js"></script>
+	 <script src="https://raw.githubusercontent.com/mukunthan23/mukunthan23.github.io/master/d3.v4.js"></script>
 
      <!-- Tableau Extensions API Library  -->
      <!-- library is in the /lib directory -->
