--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
          <div>
            <h1>Hello Extensions!</h1>
            <p id="resultBox" class="lead">Not Initialized</p>
+		  <p id="resultBox1" class="lead">Not Initialized</p>
            <button id="initializeButton" class="btn btn-primary">Initialize Extensions API</button>
          </div>
        </div>
