--- a/index.html
+++ b/index.html
@@ -7,28 +7,129 @@
      <title>Hello Extensions</title>
 
      <!-- jQuery -->
-     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
      <!-- Bootstrap -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+	 
+	<!-- Load d3.js -->
+<script src="https://d3js.org/d3.v4.js"></script>
 
      <!-- Tableau Extensions API Library  -->
      <!-- library is in the /lib directory -->
-     <script src="https://raw.githubusercontent.com/mukunthan23/mukunthan23.github.io/master/tableau-extensions-1.latest.js"></script>
+     <script src="https://raw.githubusercontent.com/tableau/extensions-api/master/lib/tableau-extensions-1.latest.js"></script>
 
      <!-- Your JavaScript code that uses the Extensions API goes here -->
-     <script src="https://raw.githubusercontent.com/mukunthan23/mukunthan23.github.io/master/Hello-Extension.js"></script>
+	 <script>
+function kernelDensityEstimator(kernel, X) {
+  return function(V) {
+    return X.map(function(x) {
+      return [x, d3.mean(V, function(v) { return kernel(x - v); })];
+    });
+  };
+}
+function kernelEpanechnikov(k) {
+  return function(v) {
+    return Math.abs(v /= k) <= 1 ? 0.75 * (1 - v * v) / k : 0;
+  };
+}
+
+$(document).ready(function() {
+
+  // Hook up an event handler for the load button click.
+  // Wait to initialize until the button is clicked.
+  $("#initializeButton").click(function() {
+	  
+
+
+    // Disable the button after it's been clicked
+    $("#initializeButton").prop('disabled', true);
+
+    tableau.extensions.initializeAsync().then(function() {
+
+      // Initialization succeeded! Get the dashboard
+      var dashboard = tableau.extensions.dashboardContent.dashboard;
+
+      // Display the name of dashboard in the UI
+      $("#resultBox").html("I'm running in a dashboard named <strong>" + dashboard.name + "</strong>");
+	  
+	  const worksheets = tableau.extensions.dashboardContent.dashboard.worksheets;
+
+    // Find a specific worksheet 
+    var worksheet = worksheets.find(function (sheet) {
+      return sheet.name === "Extension Testing";
+    });
+	
+	// get the summary data for the sheet
+ worksheet.getSummaryDataAsync().then(function (sumdata) {
+
+  const worksheetData = sumdata;
+  // The getSummaryDataAsync() method returns a DataTable
+  // Map the DataTable (worksheetData) into a format for display, etc.
+  $("#resultBox1").html("I'm running in a dashboard named <strong>" + dashboard.name + "</strong>");
+  
+  // add the x Axis
+  var x = d3.scaleLinear()
+            .domain([0, 1000])
+            .range([0, width]);
+  svg.append("g")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
+
+  // add the y Axis
+  var y = d3.scaleLinear()
+            .range([height, 0])
+            .domain([0, 0.01]);
+  svg.append("g")
+      .call(d3.axisLeft(y));
+
+  // Compute kernel density estimation
+  var kde = kernelDensityEstimator(kernelEpanechnikov(7), x.ticks(40))
+  var density =  kde( worksheetData.map(function(d){  return d.price; }) )
+
+  // Plot the area
+  svg.append("path")
+      .attr("class", "mypath")
+      .datum(density)
+      .attr("fill", "#69b3a2")
+      .attr("opacity", ".8")
+      .attr("stroke", "#000")
+      .attr("stroke-width", 1)
+      .attr("stroke-linejoin", "round")
+      .attr("d",  d3.line()
+        .curve(d3.curveBasis)
+          .x(function(d) { return x(d[0]); })
+          .y(function(d) { return y(d[1]); })
+      );
+  
+ });
+  
+	
+    }, function(err) {
+
+      // something went wrong in initialization
+      $("#resultBox").html("Error while Initializing: " + err.toString());
+    });
+  });
+  
+  
+});
+
+
+
+	 </script>
+     
      </head>
      <body>
        <div class="container">
          <div>
            <h1>Hello Extensions!</h1>
            <p id="resultBox" class="lead">Not Initialized</p>
-		 
+		    <p id="resultBox1" class="lead">Not Initialized</p>
            <button id="initializeButton" class="btn btn-primary">Initialize Extensions API</button>
          </div>
        </div>
-	   
+	   <div id="my_dataviz"></div>
      </body>
  </html>
