--- a/index.html
+++ b/index.html
@@ -43,17 +43,20 @@ $(document).ready(function() {
       // Display the name of dashboard in the UI
       $("#resultBox").html("I'm running in a dashboard named <strong>" + dashboard.name + "</strong>");
 	  
-	  const worksheets = tableau.extensions.dashboardContent.dashboard.worksheets;
+	  var worksheets = tableau.extensions.dashboardContent.dashboard.worksheets;
 
     // Find a specific worksheet 
     var worksheet = worksheets.find(function (sheet) {
-      return sheet.name === "Extension Testing";
+	    if(sheet.name=="Extension Testing")
+	    {
+      		return sheet.name;
+	    }
     });
 	
 	// get the summary data for the sheet
  worksheet.getSummaryDataAsync().then(function (sumdata) {
 
-  const worksheetData = sumdata;
+  var worksheetData = sumdata;
   // The getSummaryDataAsync() method returns a DataTable
   // Map the DataTable (worksheetData) into a format for display, etc.
   $("#resultBox1").html("I'm running in a dashboard named <strong>" + dashboard.name + "</strong>");
