--- a/index.html
+++ b/index.html
@@ -8115,8 +8115,8 @@ alert("click sucess");
     });
 
     
-	    
-$("#resultBox1").html("I'm running in a dashboard named <strong>" + worksheet.name + "</strong>");
+	    alert(worksheet);
+$("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name + "</strong>");
 	
 	// get the summary data for the sheet
 	
