--- a/index.html
+++ b/index.html
@@ -8142,7 +8142,8 @@ $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name +
   
          for (var i=0; i < worksheetData.length; i++) {
             labels.push(worksheetData[i][0].formattedValue);
-            data.push(worksheetData[i][1].value);
+            alert(worksheetData[i][1].value);
+		 data.push(worksheetData[i][1].value);
          }
   
   // add the x Axis
