--- a/index.html
+++ b/index.html
@@ -8141,6 +8141,8 @@ $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name +
   var labels = [];
          var data = [];
          var worksheetData = sumdata;
+	 alert("sumdata "+sumdata);
+		 alert("worksheetData "+worksheetData.length);
   
          for (var i=0; i < worksheetData.length; i++) {
 		 alert(worksheetData[i][0].formattedValue);
