--- a/index.html
+++ b/index.html
@@ -8091,21 +8091,23 @@ exports.Extensions = Extensions;
      <!-- Your JavaScript code that uses the Extensions API goes here -->
 
 	 <script >
-	 function kernelDensityEstimator(kernel, X) {
-  return function(V) {
-    return X.map(function(x) {
-      return [x, d3.mean(V, function(v) { return kernel(x - v); })];
-    });
-  };
-}
-function kernelEpanechnikov(k) {
-  return function(v) {
-    return Math.abs(v /= k) <= 1 ? 0.75 * (1 - v * v) / k : 0;
-  };
-}
+// set the dimensions and margins of the graph
+var margin = {top: 10, right: 30, bottom: 90, left: 40},
+    width = 460 - margin.left - margin.right,
+    height = 450 - margin.top - margin.bottom;
+
+// append the svg object to the body of the page
+var svg = d3.select("#my_dataviz")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
 	 $(document).ready(function() {
   // Hook up an event handler for the load button click.
   // Wait to initialize until the button is clicked.
+  
   $("#initializeButton").click(function() {
 	  
 alert("click sucess");
@@ -8113,7 +8115,7 @@ alert("click sucess");
     $("#initializeButton").prop('disabled', true);
     tableau.extensions.initializeAsync().then(function() {
 	    
-	    alert("tableau function sucess");
+	    //alert("tableau function sucess");
       // Initialization succeeded! Get the dashboard
       var dashboard = tableau.extensions.dashboardContent.dashboard;
       // Display the name of dashboard in the UI
@@ -8133,60 +8135,64 @@ alert("click sucess");
 $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name + "</strong>");
 
  // get the summary data for the sheet
- worksheet.getSummaryDataAsync().then(function (sumdata) {
-alert("am inside datasync");
-	 alert(sumdata.data);
+  worksheet.getSummaryDataAsync().then(function (sumdata) {
+//alert("am inside datasync");
+	 //alert(sumdata.data);
   //const worksheetData = sumdata;
   // The getSummaryDataAsync() method returns a DataTable
   // Map the DataTable (worksheetData) into a format for display, etc.
   var labels = [];
          var data = [];
          var worksheetData = sumdata.data;
-	 alert("sumdata "+sumdata);
-	  alert("worksheetData "+worksheetData);
+	 //alert("sumdata "+sumdata);
+	  //alert("worksheetData "+worksheetData);
 		 alert("worksheetData len "+worksheetData.length);
   
          for (var i=0; i < worksheetData.length; i++) {
-		 alert(worksheetData[i][0].formattedValue);
+		 //alert(worksheetData[i][0].formattedValue);
             labels.push(worksheetData[i][0].formattedValue);
 			
-			alert(worksheetData[i][1].value);
+			//alert(worksheetData[i][1].value);
             data.push(worksheetData[i][1].value);
          }
   
-  // add the x Axis
-  var x = d3.scaleLinear()
-            .domain([0, 1000])
-            .range([0, width]);
-  svg.append("g")
-      .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x));
+  var x = d3.scaleBand()
+  .range([ 0, width ])
+  .domain(data.map(function(d) { return d.Country; }))
+  .padding(0.2);
+svg.append("g")
+  .attr("transform", "translate(0," + height + ")")
+  .call(d3.axisBottom(x))
+  .selectAll("text")
+    .attr("transform", "translate(-10,0)rotate(-45)")
+    .style("text-anchor", "end");
 
-  // add the y Axis
-  var y = d3.scaleLinear()
-            .range([height, 0])
-            .domain([0, 0.01]);
-  svg.append("g")
-      .call(d3.axisLeft(y));
+// Add Y axis
+var y = d3.scaleLinear()
+  .domain([0, 13000])
+  .range([ height, 0]);
+svg.append("g")
+  .call(d3.axisLeft(y));
 
-  // Compute kernel density estimation
-  var kde = kernelDensityEstimator(kernelEpanechnikov(7), x.ticks(40))
-  var density =  kde( data.map(function(d){  return d.price; }) )
+// Bars
+svg.selectAll("mybar")
+  .data(data)
+  .enter()
+  .append("rect")
+    .attr("x", function(d) { return x(d.Country); })
+    .attr("width", x.bandwidth())
+    .attr("fill", "#69b3a2")
+    // no bar at the beginning thus:
+    .attr("height", function(d) { return height - y(0); }) // always equal to 0
+    .attr("y", function(d) { return y(0); })
 
-  // Plot the area
-  svg.append("path")
-      .attr("class", "mypath")
-      .datum(density)
-      .attr("fill", "#69b3a2")
-      .attr("opacity", ".8")
-      .attr("stroke", "#000")
-      .attr("stroke-width", 1)
-      .attr("stroke-linejoin", "round")
-      .attr("d",  d3.line()
-        .curve(d3.curveBasis)
-          .x(function(d) { return x(d[0]); })
-          .y(function(d) { return y(d[1]); })
-      );
+// Animation
+svg.selectAll("rect")
+  .transition()
+  .duration(800)
+  .attr("y", function(d) { return y(d.Value); })
+  .attr("height", function(d) { return height - y(d.Value); })
+  .delay(function(d,i){console.log(i) ; return(i*100)})
 
  });
 	
@@ -8196,7 +8202,7 @@ alert("am inside datasync");
       // something went wrong in initialization
       $("#resultBox").html("Error while Initializing: " + err.toString());
     });
-	alert("after tableau function");
+	//alert("after tableau function");
   });
   
   
