--- a/index.html
+++ b/index.html
@@ -8146,7 +8146,7 @@ $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name +
          var worksheetData = sumdata.data;
 	 //alert("sumdata "+sumdata);
 	  //alert("worksheetData "+worksheetData);
-		 alert("worksheetData len "+worksheetData.length);
+		// alert("worksheetData len "+worksheetData.length);
   
          for (var i=0; i < worksheetData.length; i++) {
 		 //alert(worksheetData[i][0].formattedValue);
@@ -8158,7 +8158,7 @@ $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name +
   
   var x = d3.scaleBand()
   .range([ 0, width ])
-  .domain(data.map(function(d) { return d.Country; }))
+  .domain(data.map(function(d) { return d.Category; }))
   .padding(0.2);
 svg.append("g")
   .attr("transform", "translate(0," + height + ")")
@@ -8179,7 +8179,7 @@ svg.selectAll("mybar")
   .data(data)
   .enter()
   .append("rect")
-    .attr("x", function(d) { return x(d.Country); })
+    .attr("x", function(d) { return x(d.Category); })
     .attr("width", x.bandwidth())
     .attr("fill", "#69b3a2")
     // no bar at the beginning thus:
@@ -8190,8 +8190,8 @@ svg.selectAll("mybar")
 svg.selectAll("rect")
   .transition()
   .duration(800)
-  .attr("y", function(d) { return y(d.Value); })
-  .attr("height", function(d) { return height - y(d.Value); })
+  .attr("y", function(d) { return y(d.Sales); })
+  .attr("height", function(d) { return height - y(d.Sales); })
   .delay(function(d,i){console.log(i) ; return(i*100)})
 
  });
