--- a/index.html
+++ b/index.html
@@ -8156,6 +8156,21 @@ $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name +
             data.push(worksheetData[i][1].value);
          }
   
+  var ctx = $("#my_dataviz");
+         var myChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+               labels: labels,
+               datasets: [{
+                  backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850"],
+                  data: data
+               }]
+            }
+         });
+      });
+   }
+ 
+  /*
   var x = d3.scaleBand()
   .range([ 0, width ])
   .domain(data.map(function(d) { return d.Category; }))
@@ -8192,7 +8207,7 @@ svg.selectAll("rect")
   .duration(800)
   .attr("y", function(d) { return y(d.Sales); })
   .attr("height", function(d) { return height - y(d.Sales); })
-  .delay(function(d,i){console.log(i) ; return(i*100)})
+  .delay(function(d,i){console.log(i) ; return(i*100)})*/
 
  });
 	
