--- a/index.html
+++ b/index.html
@@ -8126,10 +8126,10 @@ $("#resultBox1").html("I'm accesing worksheet named <strong>" + worksheet.name +
  // get the summary data for the sheet
   worksheet.getSummaryDataAsync().then(function (sumdata) {
 //alert("am inside datasync");
-	 //alert(sumdata.data);
-  //const worksheetData = sumdata;
-  // The getSummaryDataAsync() method returns a DataTable
-  // Map the DataTable (worksheetData) into a format for display, etc.
+//alert(sumdata.data);
+//const worksheetData = sumdata;
+// The getSummaryDataAsync() method returns a DataTable
+// Map the DataTable (worksheetData) into a format for display, etc.
 var labels = [];
 var data = [];
 var worksheetData = sumdata.data;
@@ -8147,7 +8147,7 @@ var worksheetData = sumdata.data;
   
 	var ctx = $("#my_dataviz");
 		 var myChart = new Chart(ctx, {
-			type: 'doughnut',
+			type: 'bar',
 			data: {
 			   labels: labels,
 			   datasets: [{
@@ -8156,47 +8156,6 @@ var worksheetData = sumdata.data;
 			   }]
 			}
 		 });
-
- 
-  /*
-  var x = d3.scaleBand()
-  .range([ 0, width ])
-  .domain(data.map(function(d) { return d.Category; }))
-  .padding(0.2);
-svg.append("g")
-  .attr("transform", "translate(0," + height + ")")
-  .call(d3.axisBottom(x))
-  .selectAll("text")
-    .attr("transform", "translate(-10,0)rotate(-45)")
-    .style("text-anchor", "end");
-
-// Add Y axis
-var y = d3.scaleLinear()
-  .domain([0, 13000])
-  .range([ height, 0]);
-svg.append("g")
-  .call(d3.axisLeft(y));
-
-// Bars
-svg.selectAll("mybar")
-  .data(data)
-  .enter()
-  .append("rect")
-    .attr("x", function(d) { return x(d.Category); })
-    .attr("width", x.bandwidth())
-    .attr("fill", "#69b3a2")
-    // no bar at the beginning thus:
-    .attr("height", function(d) { return height - y(0); }) // always equal to 0
-    .attr("y", function(d) { return y(0); })
-
-// Animation
-svg.selectAll("rect")
-  .transition()
-  .duration(800)
-  .attr("y", function(d) { return y(d.Sales); })
-  .attr("height", function(d) { return height - y(d.Sales); })
-  .delay(function(d,i){console.log(i) ; return(i*100)})*/
-
  });
 	
 	// get the summary data for the sheet
@@ -8223,6 +8182,8 @@ svg.selectAll("rect")
            <button id="initializeButton" class="btn btn-primary">Initialize Extensions API</button>
          </div>
        </div>
-	   <div id="my_dataviz"></div>
+	   <div id="my_dataviz">
+	   <p>chart here</p>
+	   </div>
      </body>
  </html>
