--- a/index.html
+++ b/index.html
@@ -8182,8 +8182,9 @@ var worksheetData = sumdata.data;
            <button id="initializeButton" class="btn btn-primary">Initialize Extensions API</button>
          </div>
        </div>
-	   <div id="my_dataviz">
+	   <div >
 	   <p>chart here</p>
+	   <canvas id="myChart" width="600" height="250"></canvas>
 	   </div>
      </body>
  </html>
