--- a/index.html
+++ b/index.html
@@ -8184,7 +8184,7 @@ var worksheetData = sumdata.data;
        </div>
 	   <div >
 	   <p>chart here</p>
-	   <canvas id="myChart" width="600" height="250"></canvas>
+	   <canvas id="my_dataviz" width="600" height="250"></canvas>
 	   </div>
      </body>
  </html>
