--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Pie Chart Extension</title>
+		<title>Json Extension</title>
 
 		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -20,13 +20,16 @@
 		<script src="./tableau-extensions-1.latest.js"></script>
 		
 		<!-- Tableau Extensions Library  -->
-		<script src="./Pie_Chart_Extension.js"></script>
+		<script src="./Json_Testing.js"></script>
 
 
 	</head>
 	<body>
-		<div class="wrapper">
-			<canvas id="myChart" width="600" height="250"></canvas>
+		<div class="container">
+			<div>
+			<h1>Hello Json Testing Extensions!</h1>
+			<p id="resultBox" class="lead">Not Initialized</p>
+			</div>
 		</div>
 	</body>
 </html>
