--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	    </style>
 
 		<!-- Load d3.js -->
-		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<script src="https://d3js.org/d3.v3.min.js"></script>
 
 		<!-- Tableau Extensions API Library  -->
 		<script src="./tableau-extensions-1.latest.js"></script>
