--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Json Extension</title>
 
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
