--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -10,47 +8,50 @@
 
 		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		
+
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 		
 		 <style>
 	
-	.node {
-		cursor: pointer;
-	}
+		.node {
+			cursor: pointer;
+		}
 
-	.node circle {
-	  fill: #fff;
-	  stroke: steelblue;
-	  stroke-width: 3px;
-	}
+		.node circle {
+		  fill: #fff;
+		  stroke: steelblue;
+		  stroke-width: 3px;
+		}
 
-	.node text {
-	  font: 12px sans-serif;
-	}
+		.node text {
+		  font: 12px sans-serif;
+		}
 
-	.link {
-	  fill: none;
-	  stroke: #ccc;
-	  stroke-width: 2px;
-	}
-	
-    </style>
+		.link {
+		  fill: none;
+		  stroke: #ccc;
+		  stroke-width: 2px;
+		}
 
-		<!-- load the d3.js library -->	
+	    </style>
+
+		<!-- Load d3.js -->
 		<script src="https://d3js.org/d3.v3.min.js"></script>
+
+		<!-- Tableau Extensions API Library  -->
+		<script src="./tableau-extensions-1.latest.js"></script>
 		
-		<script src="./test-json.js"></script>
-		
+		<!-- Tableau Extensions Library  -->
+		<script src="./Json_Testing.js"></script>
 
 
 	</head>
 	<body>
 		<div class="container">
 			<div>
-			<h1>Hello Desktop Json Testing Extensions!</h1>
+			<h1>Hello Json Testing Extensions!</h1>
 			<p id="resultBox" class="lead">Not Initialized</p>
 			</div>
 		</div>
