--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="container">
 			<div>
 			<h1>Hello Json Testing Extensions!</h1>
-			<p id="resultBox" class="lead">Not Initialized</p>
+			<p id="resultBox" class="lead"></p>
 			</div>
 		</div>
 	</body>
