--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<script src="https://d3js.org/d3.v3.min.js"></script>
 
 		<!-- Tableau Extensions API Library  -->
-		<script src="./tableau-extensions-1.1.0.js"></script>
+		<script src="./tableau-extensions-1.latest.min.js"></script>
 		
 		<!-- Tableau Extensions Library  -->
 		<script src="./Json_Testing.js"></script>
