--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 		
 		 <style>
 	
@@ -38,13 +38,13 @@
 	    </style>
 
 		<!-- Load d3.js -->
-		<script src="https://d3js.org/d3.v3.min.js"></script>
+		<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 
 		<!-- Tableau Extensions API Library  -->
-		<script src="./tableau-extensions-1.latest.min.js"></script>
+		<script type="text/javascript" src="./tableau-extensions-1.1.0.js"></script>
 		
 		<!-- Tableau Extensions Library  -->
-		<script src="./Json_Testing.js"></script>
+		<script type="text/javascript" src="./Json_Testing.js"></script>
 
 
 	</head>
