--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
 		.node circle {
 		  fill: #fff;
 		  stroke: steelblue;
-		  stroke-width: 3px;
+		  stroke-width: 1.5px;
 		}
 		.node text {
-		  font: 12px sans-serif;
+		  font-size: 10px;
+		  cursor:pointer;
+		  fill:black;
 		}
 		.link {
 		  fill: none;
 		  stroke: #ccc;
-		  stroke-width: 2px;
+		  stroke-width: 1px;
 		}
 	    </style>
 
