--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 		<div class="radarChart"></div>
 
-		<script src="radarChart.js"></script>	
-		<script src="script.js"></script>
+		<script src="./radarChart.js"></script>	
+		<script src="./script.js"></script>
 
 	</body>
 </html>
