--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<div class="radarChart"></div>
 
-		<script src="./radarChart.js"></script>	
+		<script src="./RadarChart.js"></script>	
 		<script src="./script.js"></script>
 
 	</body>
