--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 		<!-- D3.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+		<script type="text/javascript" src="./tableau-extensions-1.1.0.js"></script>
 		
 		<style>
 			body {
