--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		
 		<style>
 			body {
-				font-family: 'Open Sans', sans-serif;
-				font-size: 11px;
+				font-family: 'Trebuchet MS', 'Trebuchet MS';
+				font-size: 10px;
 				font-weight: 300;
 				fill: #242424;
 				text-align: center;
