--- a/index.html
+++ b/index.html
@@ -1,46 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/ >
-		<title>Smoothed D3.js Radar Chart</title>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Date Parameter Extension</title>
 
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-
-		<!-- D3.js -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+		<!-- Tableau Extensions API Library  -->
 		<script type="text/javascript" src="./tableau-extensions-1.1.0.js"></script>
 		
-		<style>
-			body {
-				font-family: 'Trebuchet MS', 'Trebuchet MS';
-				font-size: 10px;
-				font-weight: 300;
-				fill: #242424;
-				text-align: center;
-				text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
-				cursor: default;
-			}
-			
-			.legend {
-				font-family: 'Raleway', sans-serif;
-				fill: #333333;
-			}
-			
-			.tooltip {
-				fill: #333333;
-			}
-		</style>
-				<script src="./script.js"></script>
+		<!-- Tableau Extensions Library  -->
+		<script type="text/javascript" src="./dateparam.js"></script>
 
-	
+
 	</head>
 	<body>
-
-		<div class="radarChart"></div>
-		<script src="./RadarChart.js"></script>	
-
-
-
 
 	</body>
 </html>
