--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<body>
 
 		<div id="screen_shot" onclick="divclick()"; >
-		<img src="screenshot.png"  height="32" width="32">
+		<img src="screenshot (2).png"  height="32" width="32">
 		</div>
 
 		
