--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		function divclick()
 		{
 			html2canvas(document.body, {
-				width: 100%,
-				height: 100%,
+				width: 1024,
+				height: 600,
 				x: 0,
 				y: 0
 			}).then(function(canvas) 
