--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<title>Screenshot</title>
 
 		<!-- Required Js File -->
-		<script src="./html2canvas.js"></script>
 		<script src="./core.js"></script>
+		<script src="./html2canvas.js"></script>
+		
 		<script>
 		function divclick()
 		{
+			alert("iamhere");
 			html2canvas(document.body, {
 				width: 1024,
 				height: 600,
