--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 		<div id="screen_shot" onclick="divclick()"; >
 		<img src="screenshot (2).png"  height="32" width="32">
 		</div>
-		<div id="resultbox">
+		<div>
+			<p id="resultBox" ></p>
 		</div>
 
 		
