--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					var link = document.createElement('a');
 					link.addEventListener('click', function(ev) 
 					{
-						//alert(canvas.toDataURL("image/png"));
+						alert(canvas.toDataURL());
 						$("#resultBox").html(canvas.toDataURL());
 						link.href = canvas.toDataURL("image/png")
 						link.download = "screenshot.png";
