--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script>
 		function divclick()
 		{
-			alert("iamhere");
+			//alert("iamhere");
 			html2canvas(document.body, {
 				width: 1024,
 				height: 600,
