--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					var link = document.createElement('a');
 					link.addEventListener('click', function(ev) 
 					{
-						alert(canvas.toDataURL());
+						//alert(canvas.toDataURL());
 						var dataUrl = canvas.toDataURL();
 						document.getElementById("resultBox").value = dataUrl;
 						//$("#resultBox").html(canvas.toDataURL().toString());
